<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/history_def_category"
                    android:textColor="@color/colorTitle"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/history_def_mixed"
                    android:textColor="@color/colorTitle"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/category"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/correct_ans"
                    style="@style/history_style_for_desc"
                    android:text="@string/history_def_correct_answers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category" />


                <TextView
                    android:id="@+id/text_view_correct_ans"
                    android:layout_marginStart="@dimen/margin_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/def_amount"
                    app:layout_constraintStart_toEndOf="@id/correct_ans"
                    app:layout_constraintTop_toTopOf="@id/correct_ans"
                    android:layout_marginLeft="@dimen/margin_vertical" />


                <TextView
                    android:id="@+id/difficulty"
                    style="@style/history_style_for_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/def_text_difficulty"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/correct_ans" />

                <TextView
                    android:id="@+id/text_view_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/margin_vertical"
                    android:layout_height="wrap_content"
                    android:text="@string/def_easy"
                    app:layout_constraintStart_toEndOf="@id/difficulty"
                    app:layout_constraintTop_toTopOf="@id/difficulty"
                    android:layout_marginLeft="@dimen/margin_vertical" />

                <View
                    android:id="@+id/pop_up_menu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/ic_more"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingExtra="1sp"
                    android:text="may"
                    android:textColor="@color/colorDesc"
                    android:textSize="9sp"
                    android:translationY="-0.63sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>
