<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.fragments.main.MainFragment">

        <ImageView
            android:id="@+id/image_main_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:src="@drawable/image_main_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_text_amount"
            style="@style/main_fr_text_linear"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_main_fragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_amount_main_fr"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/number_qst_amount"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_main_start">

            <LinearLayout
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/main_fr_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_for_button"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/main_fr_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_for_button"
                    android:src="@drawable/ic_minus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linear_text_amount">

            <SeekBar
                android:id="@+id/amount_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progressBackgroundTint="@color/OtherGrayishViolet"
                android:progressTint="@color/BrightViolet"
                android:thumbTint="@color/BrightViolet"
                app:haloRadius="15dp"
                app:labelBehavior="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner_category"
            style="@style/main_fr_spinner_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_seekBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fr_text_category"
                android:textSize="@dimen/normal_text" />


            <Spinner
                    android:id="@+id/spinner_main_category"
                android:layout_width="match_parent"
                android:entries="@array/spinner_category_example"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/main_fr_spinner_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fr_difficulty_text"
                android:textSize="@dimen/normal_text" />

            <Spinner
                android:id="@+id/spinner_category_difficulty"
                android:layout_width="match_parent"
                android:entries="@array/spinner_category_example"
                android:layout_height="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_main_start"
            style="@style/btn_start_main_fr"
            android:text="@string/main_fr_btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>